Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61760

Loading DDS/PKM from upper-cased name files doesn't work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.9.2
    • 5.9
    • Qt3D
    • None
    • 83cff579d188b60ab5e81e6a4e1de449ac6bc387

      The check for the "potential" file format in qtexture.cpp checks if the file name ends in .dds, which fails if f.i. the file is actually called .DDS.

        For Gerrit Dashboard: QTBUG-61760
        # Subject Branch Project Status CR V

            peppe Giuseppe D'Angelo
            peppe Giuseppe D'Angelo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes