Match the DDS/PKM file extension case-insensitively

... or you won't be able to load a file called "FOO.DDS".

Task-number: QTBUG-61760
Change-Id: Id46163f62e20e37a844fa60e0be6be2881280a2c
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>